--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,21 @@ html, body {
     border: 0;
     border-top: 1px solid #e2e8f0;
 }
+
+/* Solid icons */
+@font-face {
+  font-family: "Font Awesome 5 Free";
+  src: url("/media/fa-solid-900.ee698398.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap; 
+}
+
+/* Brand icons */
+@font-face {
+  font-family: "Font Awesome 5 Brands";
+  src: url("/media/fa-brands-400.86ee2658.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap; 
+}
